@startuml
title Inventory Management Module - Class Diagram

top to bottom direction
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 45
skinparam ranksep 55
skinparam ArrowThickness 1
skinparam packageTitleFontStyle bold

skinparam class {
    BackgroundColor white
    BorderColor black
}

skinparam package {
    BackgroundColor white
    BorderColor black
}

package "Presentation Layer" {

    class Main

    class InventoryMenu {
        - service : InventoryService
        - scanner : Scanner
    }

    class DataInitializer
}

package "Domain Layer" {

    class InventoryService {
        - products : Map<Integer, Product>
        - items : List<Item>
        - defectiveItems : List<DefectiveItem>
    }

    class Product {
        - id : int
        - name : String
        - manufacturer : Manufacturer
        - min_stock : int
        - category : Category
        - sub_category : Category
        - sub_sub_category : Category
        - shelf : int
        - aisle : int
        - storage_amount : int
        - shelf_amount : int
        - supplierCosts : Map<Integer, ArrayList<Float>>
        - salesHistory : ArrayList<Float>
        - specificDiscounts : List<Discount>
    }

    class Item {
        - itemID : int
        - expirationDate : LocalDate
        - weight : int
        - price : int
    }

    class Category {
        - id : int
        - name : String
        - parentCategory : Category
    }

    class Manufacturer {
        - id : int
        - name : String
    }

    abstract class Report {
        - date : LocalDateTime
    }

    class InventoryReport
    class ShortageReport
    class DefectiveReport

    class DefectiveItem {
        - product : Product
        - defectiveQuantity : int
        - defectiveLocation : String
    }

    class Discount
}

Main ..> InventoryMenu : starts
Main ..> DataInitializer : uses
InventoryMenu --> InventoryService : uses
DataInitializer ..> InventoryService : loads data

InventoryService --> "0..*" Product : manages
InventoryService --> "0..*" Item : tracks
InventoryService --> "0..*" DefectiveItem : stores

Product "*" --> "1" Manufacturer : produced by
Product --> "0..1" Category : category
Product --> "0..1" Category : sub category
Product --> "0..1" Category : sub-sub category

Category "0..*" --> "0..1" Category : parent

Item "*" --> "1" Product : instance of

Product --> "0..*" Discount : discounts

Report <|-- InventoryReport
Report <|-- ShortageReport
Report <|-- DefectiveReport

DefectiveItem "*" --> "1" Product : refers to

InventoryReport ..> "0..*" Product : displays
ShortageReport ..> "0..*" Product : displays
DefectiveReport ..> "0..*" DefectiveItem : displays

@enduml